force-app/main/default/objects/dw_syteline_lu_build_station__x/dw_syteline_lu_build_station__x.object-meta.xml
<CustomObject>
    <description>dw_syteline$lu_build_station</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_syteline$lu_build_station</externalName>
    <label>dw_syteline$lu_build_station</label>
    <pluralLabel>dw_syteline$lu_build_station</pluralLabel>
</CustomObject>