force-app/main/default/objects/dw_syteline_lu_build_station__x/fields/build_station_desc__c.field-meta.xml
<CustomField>
    <fullName>build_station_desc__c</fullName>
    <description>build_station_desc</description>
    <externalDeveloperName>build_station_desc</externalDeveloperName>
    <label>build_station_desc</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>