force-app/main/default/objects/dw_syteline_lu_build_station__x/fields/work_center_id__c.field-meta.xml
<CustomField>
    <fullName>work_center_id__c</fullName>
    <description>work_center_id</description>
    <externalDeveloperName>work_center_id</externalDeveloperName>
    <label>work_center_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>